# Bootcamp-Samriddhi

./: .gitignore  README.md
APIs/: Notes.html  Notes.md
APIs/API_Client_Pogramming/: Ex-1.py  Ex-10.py  Ex-11.py  Ex-12.py  Ex-13.py  Ex-14.py  Ex-2.py  Ex-3.py  Ex-4.py  Ex-5.py  Ex-6.py  Ex-7.py  Ex-8.py  Ex-9.py
APIs/API_Endpoint_development/: readme.md
APIs/Simple_API_Development/: Readme.md
Classes and Objects/: Ex-2-1.py  Ex-2-10.py  Ex-2-11.py  Ex-2-14.py  Ex-2-17.py  Ex-2-2.py  Ex-2-6.py  Ex-2-7.py  Ex-2-8.py  Ex-2-9.py
Data Structures/: Ex-3-1.py  Ex-3-10.py  Ex-3-11.py  Ex-3-12.py  Ex-3-13.py  Ex-3-17.py  Ex-3-19.py  Ex-3-2.py  Ex-3-20.py  Ex-3-21.py  Ex-3-3.py  Ex-3-4.py  Ex-3-5.py  Ex-3-7.py  Ex-3-8.py  Ex-3-9.py
Decorators and lambda functions/: Ex-4-11.py  Ex-4-13.py  Ex-4-14.py  Ex-4-17.py  Ex-4-18.py  Ex-4-19.py  Ex-4-2.py  Ex-4-20.py  Ex-4-4.py  Ex-4-6.py  Ex-4-9.py
More Classes/: Ex-3-3.py  Ex-5-1.py  Ex-5-10.py  Ex-5-11.py  Ex-5-12.py  Ex-5-13.py  Ex-5-14.py  Ex-5-16.py  Ex-5-2.py  Ex-5-4.py  Ex-5-5.py  Ex-5-6.py  Ex-5-7.py  Ex-5-8.py  Ex-5-9.py
Persistence/: Notes.html  Notes.md
Persistence/Installation_and_Testing/: example.db  generate_inserts.py  insert_data.py  insert_statements.sql
Persistence/SQLite/: NotesSQLite.html
Persistence_queue_system/data/: api.py  consumer.py  queue.db  requirements.txt
Persistent_queue_system/: Notes.md  README.md  admin_console.py  ops_console.py  producer.py  supervisord.conf
Persistent_queue_system/persistent_queue/: dead_letter_queue.py  interfaces.py  queue.py  sqlite_queue.py
Persistent_queue_system/scripts/: cleanup.py  simulate_crash.py
Persistent_queue_system/tests/: test_consumer.py  test_dead_letter_queue.py  test_queue.py
Poetry/: Notes.html  Notes.md
Poetry/sam_my_project/: pyproject.toml
Poetry/sam_my_project/task_my_module/: __init__.py  cli.py  pyproject.toml
Poetry/sam_my_project/task_my_module/task_my_module/: __init__.py
Poetry/task_my_module/: pyproject.toml
Poetry/task_my_module/task_my_module/: pyproject.toml
Poetry/task_my_module/tests/: tests_main.py
Python-basics/: Notes.html  Notes.md
Python-basics/Classes and Objects/: Ex-2-12.py  Ex-2-13.py  Ex-2-14.py  Ex-2-16.py  Ex-2-18.py  Ex-2-19.py  Ex-2-20.py  Ex-2-3.py  Ex-2-4.py  Ex-2-5.py  readme.md
Python-basics/Data Structures/: Ex-3-10.py  Ex-3-11.py  Ex-3-12.py  Ex-3-13.py  Ex-3-14.py  Ex-3-15.py  Ex-3-16.py  Ex-3-17.py  Ex-3-18.py  Ex-3-19.py  Ex-3-2.py  Ex-3-20.py  Ex-3-21.py  Ex-3-3.py  Ex-3-5.py  Ex-3-6.py  Ex-3-7.py  Ex-3-8.py  Ex-3-9.py  readme.md
Python-basics/Decorators and lambda functions/: Ex-4-1.py  Ex-4-10.py  Ex-4-12.py  Ex-4-15.py  Ex-4-16.py  Ex-4-17.py  Ex-4-18.py  Ex-4-19.py  Ex-4-20.py  Ex-4-3.py  Ex-4-5.py  Ex-4-7.py  Ex-4-8.py  readme.md
Python-basics/Excercise 1/: readme.md
Python-basics/Excercise 1/Ex-1-1/: pyproject.toml
Python-basics/Excercise 1/Ex-1-3/: pyproject.toml  setup.py
Python-basics/Excercise 1/Ex-1-3/src/ex_1_3/: hello.py
Python-basics/More Classes/: Ex-5-1.py  Ex-5-10.py  Ex-5-11.py  Ex-5-12.py  Ex-5-13.py  Ex-5-15.py  Ex-5-16.py  Ex-5-2.py  Ex-5-3.py  Ex-5-4.py  Ex-5-5.py  Ex-5-6.py  Ex-5-8.py  Ex-5-9.py  readme.md
Streams/: Notes.html  Notes.md
Streams/Drill/: Ex-1.py  Ex-10.py  Ex-2.py  Ex-3.py  Ex-4.py  Ex-5.py  Ex-6.py  Ex-7.py  Ex-8.py  Ex-9.py
Streams/Dynamic_streaming/: process_stream.py  processing_functions.py  pyproject.toml  stream_adapter_function.py  stream_functions.py  test_input.txt
Streams/Learning Iterators/: Ex-1.py  Ex-2.py  Ex-3.py  Ex-4.py  Ex-5.py
Streams/Record Processing/samriddhi_wf_basic/: pyproject.toml
Streams/Record Processing/samriddhi_wf_basic/tests/: tests_processing_functions.py
Streams/Record Processing/samriddhi_wf_dynamic/: input.txt  pipeline.yaml  pyproject.toml
Streams/Record Processing/samriddhi_wf_dynamic/src/: processing_functions.py
Streams/Record Processing/samriddhi_wf_dynamic/src/samriddhi_wf_dynamic/: dynamic.py
Tools Setup/: Notes.html
persistent_queue_system/: Notes.html  README.md  admin_console.py  consumer.py  ops_console.py  producer.py  queue.db  requirements.txt  supervisord.conf
persistent_queue_system/data/: readme.md
persistent_queue_system/persistent_queue/: interfaces.py  sqlite_queue.py
python-basics/Excercise-1/: Ex-1-1.py
task_my_module/: requirements.txt
task_my_module/task_my_module/: cli.py
(+197 files in other folders)
