[project]
name = "task-my-module"
version = "0.1.2"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.10" 
setuptools = ">=40.8.0" 
typer = "^0.9.0" 



[tool.poetry.scripts]
task-cli = "task_my_module.cli:main"