[project]
name = "hello-world"
version = "0.1.0"
description = "A hello world project"
authors = [
    {name = "Samriddhi Chaturvedi",email = "samridhichaturvedi9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "hello_world", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
